zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__disconnect_other_clients_plugins_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 6131
expression: "format!(\"{:#?}\", switch_session_event)"
---
Some(
    DisconnectAllClientsExcept(
        1,
    ),
)
