zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__dump_layout_not_found_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Layout dump error: IoError: The layout was not found, File: nonexistent_layout_xyz\n\r",
)
