zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__dump_layout_success_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Layout dump success: layout {\n\r    pane size=1 borderless=true {\n\r        plugin location=\"tab-bar\"\n\r    }\n\r    pane\n\r    pane size=1 borderless=true {\n\r        plugin location=\"status-bar\"\n\r    }\n\r}\n\r",
)
