zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__dump_session_layout_for_tab_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", dump_layout_instruction)"
---
Some(
    DumpLayoutToPlugin {
        plugin_id: 0,
        tab_index: Some(
            0,
        ),
        response_channel: Sender { .. },
    },
)
